--- a/templates/User/Jouer/afficher_partie.html.twig
+++ b/templates/User/Jouer/afficher_partie.html.twig
@@ -1,5 +1,10 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {{form(form)}}
+
+    {{ dump(partie) }}
+{% endblock %}
+
+{% block title %}
+
 {% endblock %}
