--- a/templates/User/Jouer/afficher_partie.html.twig
+++ b/templates/User/Jouer/afficher_partie.html.twig
@@ -1,10 +1,169 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
+{% block stylesheets %}
+    <style>
+        .selected {
+            border: 2px solid red;
+        }
+        .new {
+            border: 2px solid green;
+        }
+    </style>
+{% endblock %}
 
-    {{ dump(partie) }}
+{% block body %}
+    <h1>Partie entre {{ partie.joueur1.username }} et {{ partie.joueur2.username }}</h1>
+
+    <div id="plateau">
+        {{ render(controller(
+            'App\\Controller\\JouerController::afficherPlateau',
+            { 'partie': partie.id }
+        )) }}
+    </div>
+
+    <div id="attentejoueur" style="position:fixed; top:0; left:0; height: 100%; width: 100%; background-color: darkgray; opacity: 0.8;font-size: 60px; display:none">
+        Attente du joueur
+    </div>
 {% endblock %}
 
 {% block title %}
 
+{% endblock %}
+
+{% block javascripts %}
+    <script>
+        var actualise = false;
+        var cartesSelectedTerrain = Array();
+        var cartesSelectedChameau = Array();
+        var cartesSelectedMain = Array();
+        var flag = false;
+
+        $(document).ready(function(){
+            setInterval(actualisePlateau, 2000);
+        })
+
+        function actualisePlateau() {
+            $.ajax({
+                url: "{{ path('actualise_plateau', {partie: partie.id}) }}",
+            }).done(function (etat) {
+                console.log(etat);
+                if (etat === 'touradversaire') {
+                    actualise = false;
+                    console.log('attente Adversaire')
+                    $('#attentejoueur').show();
+                }
+                if (etat === 'montour') {
+                    if (actualise === false) {
+                        console.log('reload');
+                        $('#plateau').empty().load("{{ path('afficher_plateau', {partie:partie.id}) }}");
+                        $('img').removeClass('selected');
+                        cartesSelectedTerrain = Array();
+                        cartesSelectedChameau = Array();
+                        cartesSelectedMain = Array();
+                        actualise = true;
+                        $('#attentejoueur').hide();
+                    }
+                    console.log('Mon tour')
+                }
+            });
+        }
+
+        $(document).on('click', '.cartechameau', function () {
+            if ($(this).hasClass('selected')) {
+                $(this).removeClass('selected');
+                //retirer d'un tableau
+                $index = cartesSelectedChameau.indexOf($(this).data('carte'));
+                cartesSelectedChameau.splice($index, 1);
+                console.log(cartesSelectedChameau)
+            } else {
+                $(this).addClass('selected');
+                //ajouter dans un tableau
+                cartesSelectedChameau.push($(this).data('carte'));
+                console.log(cartesSelectedChameau)
+            }
+        })
+
+        $(document).on('click', '.carteterrain', function () {
+            if ($(this).hasClass('cartechameau')){
+                $('.carteterrain').filter('.cartechameau').each(function(){
+                    flag = true;
+                    if ($(this).hasClass('selected')) {
+                        $(this).removeClass('selected');
+                        //retirer d'un tableau
+                        $index = cartesSelectedTerrain.indexOf($(this).data('carte'));
+                        cartesSelectedTerrain.splice($index, 1);
+                        console.log(cartesSelectedTerrain)
+                    } else {
+                        $(this).addClass('selected');
+                        //ajouter dans un tableau
+                        cartesSelectedTerrain.push($(this).data('carte'));
+                        console.log(cartesSelectedTerrain)
+                    }
+                })
+
+            }
+
+            if ($(this).hasClass('selected')) {
+                $(this).removeClass('selected');
+                //retirer d'un tableau
+                $index = cartesSelectedTerrain.indexOf($(this).data('carte'));
+                cartesSelectedTerrain.splice($index, 1);
+                console.log(cartesSelectedTerrain)
+            } else {
+                $(this).addClass('selected');
+                //ajouter dans un tableau
+                cartesSelectedTerrain.push($(this).data('carte'));
+                console.log(cartesSelectedTerrain)
+            }
+        })
+
+
+        $(document).on('click', '#action-prendre', function () {
+            console.log(cartesSelectedTerrain)
+            if (cartesSelectedTerrain.length === 0) {
+                alert('Selectionnez une carte');
+            }
+
+            else if ((cartesSelectedTerrain.length > 1) && (flag === false)) {
+                alert('Selectionnez une seule carte');
+            }
+            else {
+                console.log('OK');
+                $.ajax({
+                    url: "{{ path('jouer_action_prendre', {partie: partie.id}) }}",
+                    data: {
+                        cartes: cartesSelectedTerrain
+                    },
+                    method: 'POST',
+                    success: function (data) {
+                        console.log('carte' + data['cartemain'].id);
+                        $('#bloc-action').hide();
+                        $('#bloc-suivant').show();
+                        $('#carte-' + data['cartemain'].id).remove();
+                        var chameau = ''
+                        if (data['carteterrain'].rang === 7) {
+                            chameau = "cartechameau";
+                        }
+                        $('#main').append('<img src="http://localhost/jeu/public/cartes/' + data['cartemain'].img + '" class="cartemain new" height="100px" data-carte="'+data['cartemain'].id+'" />');
+                    },
+                    error: function (data) {
+                        if (data === 'erreur7') {
+                            alert('Vous avez déjà 7 cartes en main. Vous ne pouvez pas jouer cette action.');
+                        } else {
+                            alert('erreur action prendre');
+                        }
+                    }
+                })
+            }
+        })
+
+        $(document).on('click', '#action-terminer', function () {
+            window.location.reload()
+            $.ajax({
+                url: "{{ path('jouer_action_suivant', {partie: partie.id}) }}",
+                method: 'POST'
+            });
+        });
+
+    </script>
 {% endblock %}
