--- a/templates/User/change_email.html.twig
+++ b/templates/User/change_email.html.twig
@@ -1,5 +1,11 @@
+{% extends 'base.html.twig' %}
+
+{% block body %}
+
 {{ form_start(form) }}
         {{ form_row(form.email) }}
 
 <button type="submit">Changer e-mail</button>
 {{ form_end(form) }}
+
+{% endblock %}
