--- a/templates/User/changepassword.html.twig
+++ b/templates/User/changepassword.html.twig
@@ -7,7 +7,7 @@
         {{ form_row(form.plainPassword.first) }}
         {{ form_row(form.plainPassword.second) }}
 
-<button type="submit">Changer mot de passe</button>
+<button type="submit" class="btn btn-primary">Changer mot de passe</button>
 {{ form_end(form) }}
 
 {% endblock %}
