--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -1,3 +1,7 @@
+{% extends 'base.html.twig' %}
+
+{% block body %}
+
 {{ form_start(form) }}
     {{ form_row(form.fullname) }}
     {{ form_row(form.username) }}
@@ -5,5 +9,7 @@
     {{ form_row(form.password.first) }}
     {{ form_row(form.password.second) }}
 
-<button type="submit">S'inscrire</button>
+<button type="submit" class="btn btn-primary">S'inscrire</button>
 {{ form_end(form) }}
+
+{% endblock %}
