--- a/templates/Admin/index.html.twig
+++ b/templates/Admin/index.html.twig
@@ -1,18 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div>
-        {% for user in users %}
-            {{ user.username }}
-            {% if role == 'ROLE_ADMIN' %}
-                Administrateur
-            {% endif %}
-            {% else %}
-                Utilisateur
-            {% endelse %}
-        {% endfor %}
-    </div>
-    <a href="{{ path('user')}}">Retour</a>
+    Ici pour gérer les joueurs
     <a href="{{ path('security_logout')}}">Se déconnecter</a>
 
 {% endblock %}
