--- a/templates/User/change_email.html.twig
+++ b/templates/User/change_email.html.twig
@@ -1,11 +1,40 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<img src="{{ asset ('assets/images/logo.png') }}" class="logo">
 
-{{ form_start(form) }}
+{{ form_start(form, {'attr': {'class': 'body-form'}}) }}
         {{ form_row(form.email) }}
 
-<button type="submit">Changer e-mail</button>
+<button type="submit" class="button-form">Changer e-mail</button>
 {{ form_end(form) }}
 
-{% endblock %}
+        <div class="row justify-content-between">
+                <div class="col-4">
+                        <a href="{{ path('index')}}" class="button-retour">Retour <img src="{{ asset ('assets/images/fleche.png') }}" class="fleche"></a>
+
+                        <ul class="left">
+                                <li>
+                                        <a href="">Nous contacter</a>
+                                </li>
+                                <li>
+                                        <a href="">Mentions legals</a>
+                                </li>
+                        </ul>
+                </div>
+                <div class="col-4">
+                        <ul class="right">
+                                <li>
+                                        <a href="">Mon compte</a>
+                                </li>
+                                <li>
+                                        <a href="">Regles</a>
+                                </li>
+                                <li>
+                                        <a href="">Reglages</a>
+                                </li>
+                        </ul>
+                </div>
+        </div>
+
+{% endblock body %}
