--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,9 +1,38 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <a href="{{ path('security_login')}}">Connexion</a>
-    <a href="{{ path('user_registration')}}">Inscription</a>
-    <a href="{{ path('forgot_password')}}">Mot de passe oublié</a>
-    <a href="{{ path('contact')}}">Contact</a>
+    <div class="index">
+        <div class="float-right connexion_index">
+            <a href="{{ path('security_login')}}"> <i class="fas fa-user fa-2x"></i><br>Connexion</a>
+        </div>
 
+        <div class="row justify-content-between index_links">
+            <div class="col-4">
+                <a href="" class="button-jouer"><img src="{{ asset ('assets/images/fleche-orange2.png') }}" class="fleche2"> Jouer <img src="{{ asset ('assets/images/fleche-orange.png') }}" class="fleche"></a>
+                <a href="{{ path('index')}}" class="button-retour-login">Retour</a>
+                <ul class="left">
+                    <li>
+                        <a href="">Nous contacter</a>
+                    </li>
+                    <li>
+                        <a href="">Mentions legals</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-4">
+                <ul class="right-login">
+                    <li>
+                        <a href="">Mon compte</a>
+                    </li>
+                    <li>
+                        <a href="">Regles</a>
+                    </li>
+                    <li>
+                        <a href="">Reglages</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 {% endblock %}
+
