--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -7,7 +7,7 @@
     {{ form_row(form.subject) }}
     {{ form_row(form.message) }}
 
-    <button type="submit" class="btn btn-primary">Envoyer</button>
+    <input type="submit" value="Envoyer" />
     {{ form_end(form) }}
 
 {% endblock %}
