--- a/templates/forgot.html.twig
+++ b/templates/forgot.html.twig
@@ -1,13 +1,44 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<img src="{{ asset ('assets/images/logo.png') }}" class="logo">
 
-{{ form_start(form) }}
-        {{ form_row(form.username) }}
-        {{ form_row(form.plainPassword.first) }}
-        {{ form_row(form.plainPassword.second) }}
+{{ form_start(form, {'attr': {'class': 'body-form'}}) }}
+    <fieldset>
+            <label class="col-3">Pseudo</label>{{ form_widget(form.username, {'attr': {'class': 'col-8'}}) }})
+            <label class="col-3">Nouveau mot de passe</label>{{ form_widget(form.plainPassword.first, {'attr': {'class': 'col-8'}}) }})
+            <label class="col-3">Entrer de nouveau le mot de passe</label>{{ form_widget(form.plainPassword.second, {'attr': {'class': 'col-8'}}) }})
+    </fieldset>
 
-<button type="submit" class="btn btn-primary">Changer mot de passe</button>
+<button type="submit" class="button-form">Changer mot de passe</button>
 {{ form_end(form) }}
 
-{% endblock %}
+        <div class="row justify-content-between">
+                <div class="col-4">
+                        <a href="{{ path('index')}}" class="button-retour">Retour <img src="{{ asset ('assets/images/fleche.png') }}" class="fleche"></a>
+
+                        <ul class="left">
+                                <li>
+                                        <a href="">Nous contacter</a>
+                                </li>
+                                <li>
+                                        <a href="">Mentions legals</a>
+                                </li>
+                        </ul>
+                </div>
+                <div class="col-4">
+                        <ul class="right">
+                                <li>
+                                        <a href="">Mon compte</a>
+                                </li>
+                                <li>
+                                        <a href="">Regles</a>
+                                </li>
+                                <li>
+                                        <a href="">Reglages</a>
+                                </li>
+                        </ul>
+                </div>
+        </div>
+
+{% endblock body %}
