--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -2,14 +2,53 @@
 
 {% block body %}
 
-{{ form_start(form) }}
-    {{ form_row(form.fullname) }}
-    {{ form_row(form.username) }}
-    {{ form_row(form.email) }}
-    {{ form_row(form.password.first) }}
-    {{ form_row(form.password.second) }}
+    <img src="{{ asset ('assets/images/logo.png') }}" class="logo">
 
-<button type="submit" class="btn btn-primary">S'inscrire</button>
-{{ form_end(form) }}
+    {{ form_start(form, {'attr': {'class': 'body-form'}}) }}
+        <fieldset>
+            <label class="col-3">Nom</label> {{ form_widget(form.fullname, {'attr': {'class': 'col-8'}}) }}
+        </fieldset>
+        <fieldset>
+            <label class="col-3">Pseudo</label> {{ form_widget(form.username, {'attr': {'class': 'col-8'}}) }}
+        </fieldset>
+        <fieldset>
+            <label class="col-3">Adresse Email</label> {{ form_widget(form.email, {'attr': {'class': 'col-8'}}) }}
+        </fieldset>
+        <fieldset>
+            <label class="col-3">Mot de passe</label> {{ form_widget(form.password.first, {'attr': {'class': 'col-8'}}) }}
+        </fieldset>
+        <fieldset>
+            <label class="col-3">Confirmation du mot de passe</label> {{ form_widget(form.password.second, {'attr': {'class': 'col-8'}}) }}
+        </fieldset>
 
-{% endblock %}
+        <button type="submit" class="button-form">Inscription</button>
+    {{ form_end(form) }}
+
+    <div class="row justify-content-between">
+        <div class="col-4">
+            <a href="{{ path('index')}}" class="button-retour">Retour <img src="{{ asset ('assets/images/fleche.png') }}" class="fleche"></a>
+
+            <ul class="left">
+                <li>
+                    <a href="">Nous contacter</a>
+                </li>
+                <li>
+                    <a href="">Mentions legals</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-4">
+            <ul class="right">
+                <li>
+                    <a href="">Mon compte</a>
+                </li>
+                <li>
+                    <a href="">Regles</a>
+                </li>
+                <li>
+                    <a href="">Reglages</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+{% endblock body %}
